<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="user">Caroline</string>
    <string name="about_me">A propos de moi</string>
    <string name="info_me">Bonjour !Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m accompagner !J aime les jeux de cartes tels la belote et le tarot..</string>
    <string name="location">Saint pierre du mont a 5km</string>
    <string name="phone_number">+33 6 86 57 90 14</string>
    <string name="link_fb">www.facebook.com/</string>
    <string name="info_me2">Bonjour !Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m accompagner !J aime les jeux de cartes tels la belote et le tarot.. Bonjour !Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m accompagner !J aime les jeux de cartes tels la belote et le tarot.. Bonjour !Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m accompagner !J aime les jeux de cartes tels la belote et le tarot..</string>
</resources>
