...
        android:layout_height="310dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mainMenu"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:src="?attr/actionModeCloseDrawable"
        android:tint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/item_avatar"
...

    <ImageView
        android:id="@+id/favorite_true"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_star_yellow_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/action_favorite"
        app:layout_constraintEnd_toEndOf="@+id/action_favorite"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/action_favorite"
        app:layout_constraintTop_toTopOf="@+id/action_favorite"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />
...
